# maxkb_mcpserver

./: .env  .env.example  .gitignore  Dockerfile  INSTALL.md  MaxKB API.yaml  MaxKB V2 API文档.docx  README.md  WIKI_ARTICLE.md  deploy.sh  docker-compose.yml  prompt.md  prompt_external.md  pyproject.toml  test_api.py  test_api2.py  test_api3.py  test_chat_api.py  test_chat_api2.py  test_kb_info.py  test_mcp_api.py  test_mcp_client.py  test_search.py  test_search2.py
.trae/: mcp.json
.trae/documents/: MaxKB MCP Server 开发计划.md
src/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
